[gd_scene load_steps=9 format=3 uid="uid://dbtcmbsnilprt"]

[ext_resource type="PackedScene" uid="uid://bm53n76sgdj52" path="res://Scenes/player.tscn" id="1_8v2dy"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_qa580"]
[ext_resource type="PackedScene" uid="uid://beht2ism1p6r6" path="res://Scenes/mob.tscn" id="2_t2y80"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hwggg"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_3tyl6"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lhhu7"]
albedo_color = Color(1, 0.683333, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_fremr"]
material = SubResource("StandardMaterial3D_lhhu7")
top_radius = 0.7
bottom_radius = 0.7

[sub_resource type="Curve3D" id="Curve3D_bft56"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 22, 0, -22, 0, 0, 0, 0, 0, 0, 21.93, 0, 24.885, 0, 0, 0, 0, 0, 0, -22.4698, 0, 25.0054, 0, 0, 0, 0, 0, 0, -22, 0, -22, 0, 0, 0, 0, 0, 0, 22, 0, -22),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="main" type="Node"]
script = ExtResource("1_qa580")
mob_scene = ExtResource("2_t2y80")

[node name="ground" type="StaticBody3D" parent="."]
editor_description = "Serves as a floor for all of the objects in the game."
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4

[node name="floor_shape" type="CollisionShape3D" parent="ground"]
shape = SubResource("BoxShape3D_hwggg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ground"]
mesh = SubResource("BoxMesh_3tyl6")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20, 0)
shadow_enabled = true

[node name="camera_pivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.66262, 0.748956, 0, -0.748956, 0.66262, 0, 25, 37)
gizmo_extents = 1.0

[node name="main_camera" type="Camera3D" parent="camera_pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.9071, -6.98786)
visible = false
projection = 1
size = 30.0
near = 0.001
far = 116.71

[node name="player" parent="." instance=ExtResource("1_8v2dy")]
speed = 15

[node name="cylinder" type="Node3D" parent="."]

[node name="cylinder0" type="MeshInstance3D" parent="cylinder"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -22, 0, -22)
mesh = SubResource("CylinderMesh_fremr")

[node name="cylinder1" type="MeshInstance3D" parent="cylinder"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 22, 0, -22)
mesh = SubResource("CylinderMesh_fremr")

[node name="cylinder2" type="MeshInstance3D" parent="cylinder"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -22, 0, 25)
mesh = SubResource("CylinderMesh_fremr")

[node name="cylinder3" type="MeshInstance3D" parent="cylinder"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 22, 0, 25)
mesh = SubResource("CylinderMesh_fremr")

[node name="spawn_path" type="Path3D" parent="."]
curve = SubResource("Curve3D_bft56")

[node name="spawn_location" type="PathFollow3D" parent="spawn_path"]
transform = Transform3D(-0.999998, 0, 0.00149289, 0, 1, 0, -0.00149289, 0, -0.999998, 22, 0, -22)

[node name="mob_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="mob_timer" to="." method="_on_mob_timer_timeout"]
